# EzSubtitles

./: .gitignore  README.md  pyproject.toml  requirements.txt
easysubtitles/: __main__.py  app.py
