[project]
name = "easysubtitles"
version = "0.1.0"
description = "Local offline auto subtitle and SRT proofreading MVP"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7,<7",
  "faster-whisper>=1.0,<2",
  "numpy>=1.26,<3",
]

[project.scripts]
easysubtitles = "easysubtitles.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
